feat: enhance widget detection and naming logic, improve UI report handling, and update element IDs in output files

--- a/src/ui.html
+++ b/src/ui.html
@@ -2331,7 +2331,7 @@
         </svg>
         Validador
       </button>
-      <button class="tab-btn" data-tab="ai" title="Inteligência Artificial">
+      <button style="display: none;" data-tab="ai" title="Inteligência Artificial">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path
             d="M19 9l1.25-2.75L23 5l-2.75-1.25L19 2l-1.25 2.75L15 5l2.75 1.25L19 9zm-7.5.5L9 2 6.5 9.5 2 12l4.5 2.5L9 22l2.5-7.5L19 12l-7.5-2.5z" />
@@ -2350,7 +2350,7 @@
           <path
             d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z" />
         </svg>
-        Widgets
+        Names
       </button>
       <button class="tab-btn" data-tab="license" title="Gerenciar Licença">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
@@ -2578,7 +2578,7 @@
       </section>
 
 
-      <section class="tab-panel" data-panel="ai">
+      <section style="display: none;" class="tab-panel" data-panel="ai">
         <div class="card">
           <div class="card-title">Configura&#231;&#227;o da IA</div>
           <label class="checkbox">
