feat: enhance widget detection and styling for icon-box and image-box
- Updated composite pattern logic to determine widget type based on visual proportions.
- Improved padding handling for icon-box widgets, mapping to box_padding and _box_padding settings.
- Refactored CSS generation to separate solid and gradient backgrounds while avoiding layout properties in the output.
- Added tests for new icon-box padding mapping and style generation to ensure correct behavior.
- Adjusted UI button labels for clarity and consistency.

--- a/src/ui.html
+++ b/src/ui.html
@@ -195,8 +195,8 @@
       padding: 0 16px;
       border: 1px solid transparent;
       border-radius: var(--radius-sm);
-      font-weight: 600;
-      font-size: 13px;
+      font-weight: 400;
+      font-size: 13px !important;
       cursor: pointer;
       transition: all var(--anim-fast);
       white-space: nowrap;
@@ -2366,10 +2366,10 @@
         <div class="card">
           <div class="card-title">A&#231;&#245;es r&#225;pidas</div>
           <div class="row">
-            <button id="btn_inspect" class="btn secondary">Inspecionar Layout</button>
-            <button id="btn_analyze" class="btn secondary">🔍 Analisar Layout</button>
-            <button id="btn_generate" class="btn primary">Gerar JSON</button>
-            <button id="btn_reset" class="btn secondary" data-action="reset">Reiniciar</button>
+            <button id="btn_inspect" class="btn secondary">Inspecionar Json Figma</button>
+            <button id="btn_analyze" class="btn secondary">Analisador de Layout</button>
+            <button id="btn_generate" class="btn primary">Gerar para Elementor</button>
+            <button id="btn_reset" class="btn secondary" data-action="reset">Reset</button>
           </div>
         </div>
 
