feat: Implement initial plugin UI with comprehensive styling, theme switch, and tabbed navigation.

--- a/src/ui.html
+++ b/src/ui.html
@@ -2294,7 +2294,8 @@
       <div class="onboarding-section">
         <h2>Preparando seu layout</h2>
         <div class="rich-text">
-          • Use <strong>Auto Layout</strong> em todos os frames – o plugin converte para Flexbox.<br>
+          • Use <strong>Auto Layout</strong> em todos os frames sempre que possivel – o plugin converte para
+          Flexbox.<br>
           • Nomeie frames com prefixos: <code>w:button</code>, <code>w:heading</code>, <code>c:container</code>.<br>
           • Evite grupos soltos; prefira frames com Auto Layout.<br>
           • Use a aba <strong>Validador / Análise</strong> para identificar problemas.
