feat: Add overwrite option for image uploads and enhance gradient CSS handling in Elementor

--- a/src/ui.html
+++ b/src/ui.html
@@ -2767,6 +2767,12 @@
             <span>Exportar imagens automaticamente</span>
           </label>
 
+          <label class="checkbox checkbox-nested">
+            <input id="wp_overwrite_images" type="checkbox" />
+            <span>Sobrescrever imagens existentes</span>
+          </label>
+          <small class="input-hint">Quando habilitado, a mídia com o mesmo nome será substituída no WordPress.</small>
+
           <div class="slider-group" id="webp_quality_group" style="margin: 12px 0; display: none;">
             <label class="input-label" for="wp_webp_quality">Qualidade WebP: <span
                 id="webp_quality_value">85</span>%</label>
